--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
 	font-family: arial;
 	width: 80%;
 	margin : 0 auto;
-	background : #333333;
+	background :  url("../images/bowsette.png");
+	background-size: 64px, 64px;
 }
 header
 {
@@ -11,11 +12,21 @@ header
 }
 main
 {
-	background :#FFFFFF;
+	background :#CCCCCC;
 }
 footer
 {
 	background :#CCCCCC;
+}
+#bowsetteIMG
+{
+	align-content: center;
+	display: flex;
+width: 512px;
+height :128px;
+background : url("../images/bowsette.png");
+background-size:cover;
+padding: 64px;
 }
 .rotate
 {
