--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@ main
 {
 	background :#FFFFFF;
 }
+#imago
+{
+	width: 256px;
+	height: 256px;
+	background: url("../images/wolf.jpg");
+	background-size: cover;
+}
 footer
 {
 	background :#CCCCCC;
