--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,14 @@ main
 {
 	background :#FFFFFF;
 }
-#imago
+#wolf
 {
-	width: 256px;
+	width: 286px;
 	height: 256px;
 	background: url("../images/wolf.jpg");
 	background-size: cover;
+	background-image: #0263ff;
+
 }
 footer
 {
